# awesome-adversarial-traffic-engineering

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHECKPOINTS.md  CODE_OF_CONDUCT.md  CONTENT_QUALITY_CHECKLIST.md  CONTRIBUTING.md  COURSE.md  COVERAGE_AUDIT.md  FIX_STATUS.md  LEARNING_EXPERIENCE_REWRITE_REPORT.md  LICENSE  METHOD_APPENDIX_REWRITE_REPORT.md  Makefile  NOTICE.md  PLAN.md  PUBLISH_CHECKLIST.md  README.md  RESOURCES.md  REWRITE_AUDIT.md  REWRITE_STATUS.md  ROADMAP.md  SAFETY.md  SECURITY.md  STATUS.md  eslint.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
awesome/: README.md  ai-browser-agents.md  automated-abuse.md  bot-detection.md  browser-automation.md  browser-fingerprinting.md  ddos.md  detection-science.md  edge-security.md  javascript-research.md  protocol-fingerprinting.md  python.md  research-methods.md  secure-code-review.md
curriculum/: README.md  acceptance-criteria.md  lab-mapping.md  manifest.yaml  path.md  progress.yaml
docs/: competency-map.md  experienced-practitioner-fast-track.md  getting-started.md  index.md  learning-path.md  path.md  progress-tracker.md  progress.md  start-here.md
interview/: README.md  first-90-days.md  informational-questions.md  leadership-principles.md  mock-loop.md  question-bank.md  role-narrative.md  scorecards.md  study-gaps.md
lab/: LAB_COURSE_MAP.md  README.md  __init__.py  docker-compose.yml  run.py  safety.py
scripts/: README.md  __init__.py  build_docs.py  check_external_links.py  check_internal_links.py  progress.py  (+10 more)
(+263 files in other folders)
