[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "awesome-adversarial-traffic-engineering"
version = "0.1.0"
description = "Red-team-first adversarial traffic course and safe local attack lab"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0"
]

[project.optional-dependencies]
dev = [
  "mypy==1.17.0",
  "pytest==8.4.1",
  "PyYAML==6.0.2",
  "ruff==0.12.4"
]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.6.15",
  "PyYAML==6.0.2"
]

[tool.hatch.build.targets.wheel]
packages = ["lab", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests", "lab/tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"lab/tests/*" = ["S101"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["lab", "scripts"]
